finished editing html and css for styling and alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -46,14 +46,14 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+/*BEGIN HTML BODY STYLING*/
 * {
     box-sizing: border-box;
     padding:0
     margin:0;
     max-width: 100%;
-    
 }
+
 body {
     line-height: 2;
 }
@@ -61,31 +61,7 @@ body {
 section {
     padding: 4% 0;
 }
-nav {
-	display:flex;
 
-    
-}
-.logo {
-    margin: auto;
-    
-}
-.links {
-    width:70%;
-	display:flex;
-    justify-content: space-evenly;
-    padding: 25px;
-
-}
-.box {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-.box img {
-    width:83%;
-  }
 html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
@@ -100,7 +76,36 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 2;
 }
+/*END HTML BODY STYLING*/
 
+/*BEGIN HEADER STYLING*/
+nav {
+	display:flex; 
+}
+
+.logo {
+    margin: auto;  
+}
+
+.links {
+    width:70%;
+	display:flex;
+    justify-content: space-evenly;
+    padding: 25px;
+}
+
+.box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box img {
+    width:83%;
+}
+/*END HEADER STYLING*/
+
+/*BEGIN TOP CONTENT STYLING*/
 .container {
     width: 90%;
     margin: 0 auto;
@@ -118,7 +123,9 @@ p {
     text-align:left;
 	line-height: 2; 
 }
+/*END TOP CONTENT STYLING*/
 
+/*BEGIN MIDDLE CONTENT STYLING*/
 .middle-content {
     margin-bottom: 5px;
     border-bottom: 1px dashed black;
@@ -249,7 +256,9 @@ p {
     align-items: center;
     justify-content: center;
 }
+/*END MIDDLE CONTENT STYLING*/
 
+/*BEGIN BOTTOM CONTENT STYLING*/
 .bottom-content {
     display: flex;
     justify-content: space-around;
@@ -263,62 +272,69 @@ p {
     text-align:left;
 	line-height: 2;
 }
+/*END BOTTOM CONTENT STYLING*/
 
-
+/*BEGIN FOOTER STYLING*/
 footer {
     background: black;
-    display:flex;
-    align-content: flex-start;
-    margin: 0 1%;
-}
-.homeFooter { 
-    width:100%;
-    display:flex;
-    justify-content: space-evenly;
-    padding: 25px;
-
+    height:10vh;
+    width: 92%;
+    margin:0 4%;
 }
 footer nav {
-    width: 85%;
-    font-size: 14px;
-    
+    display:flex;
+    justify-content: space-around;
+    width: 70%;
 }
 
 footer nav a {
     color: white;
-    text-decoration: none;
-    text-align: left;
+    margin-top: 2%;
 }
+/*END FOOTER STYLNG*/
+/*END HOME PAGE STYLING*/
 
-/*START ABOUT.HTML STYLING*/
+
+/*START ABOUT PAGE STYLING*/
 * {
     box-sizing: border-box;
     padding:0;
     margin:0;
-
+    max-width:100%;
 }
+
 body {
     max-width: 100%;
+}
+/*BEGIN HEADER STYLING*/
+header{
+    height:20vh;
 }
 
 header nav {
 	display:flex;
     justify-content:center;
-    padding: 3% 0;
-	
+    width:90%;
+    margin:0 5%;	
 }
+
 .links2 {
 	width:80%;
 	display:flex;
     justify-content:space-evenly;
-    margin:auto;
+    padding-top:5%;
 }
+
+.logo {
+    padding-top: 4%;
+}
+
 nav a{
 	color: black;
 	text-decoration: none;
-  }
-
-  }
+}
+/*END HEADER STYLING*/
+/*BEGIN TOP CONTAINER STYLING*/
 .container2{
     display:flex;
     width: 80%;
@@ -326,38 +342,44 @@ nav a{
     font-size: 20px;
     border-bottom: 1px dashed black;
 }
+/*END TOP CONTAINER STYLING*/
+/*BEGIN MIDDLE STYLING*/
+h4 {
+	height:40px;
+	width:140px;
+	border:1px solid black;
+	background: white; 
+    margin-top: 3%;
+    display:flex; 
+    align-items: center;
+    justify-content: center;
+}
+
 .middle2{
     display:flex;
-    padding: 10px 5%;
-   
-
-}
-.bottom2{
-    display:flex;
-    padding: 10px 5%;
+    justify-content: space-around;
+    width:80%;
+    margin:0 auto;
+  
 }
 
 .container3 {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width:40%;
-    padding: 2px 1%;
     border-bottom:1px dashed black;
+    height:500px;
+	width: 450px;
+	text-align:left;
+    line-height: 1.5;
+    
 }
 
-.letswork {
+
+/*END MIDDLE STYLING*/
+/*BEGIN BOTTOM STYLING*/
+.bottomContainer2{
     display:flex;
     width: 80%;
     margin: 0 auto;
     font-size: 20px;
 }
-
-h4 {
-    border-radius:25px;
-    border:1px solid black;
-    text-align: center;
-    padding:7px;
-    width: 150px;
-    height: 50px;
-}
+/*END BOTTOM STYLING*/
+/*END ABOUT PAGE STYING*/
